Fix css overflow: auto;

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,7 +49,7 @@ form span {
   text-align: center;
   // max-width: 100vw;
   // overflow-x: hidden;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .app-svg-rescale-y-axis path,
